<resources>
    <string name="app_name">AndroidToolBox</string>
    <string name="login_title">Bonjour</string>
    <string name="Bonjour">Bonjour</string>
    <string name="Cycle_de_vie">Cycle de vie</string>
    <string name="Sauvegarde">Sauvegarde</string>
    <string name="Connexion">Connexion</string>
    <string name="ID">identifiant</string>
    <string name="Password">Mot de passe</string>
    <string name="valid">Valider</string>
    <string name="Permissions">Permissions</string>
    <string name="Web_services">Web services</string>
    <string name="textFORM">FORM</string>
    <string name="txtNAME">rentrez votre nom</string>
    <string name="txtPRENOM">rentrez votre Prenom</string>
    <string name="txtDATE">rentrez votre date de naissance</string>
    <string name="TXTname">nom</string>
    <string name="TXTPRENOM"> Prenom</string>
    <string name="txtname">name</string>
    <string name="btnpopup">afficher</string>
    <string name="PermissionTitle">afficher</string>
    <string name="titre_permission">acces aux information android </string>
    <string name="camera_image" />
    <string name="permission_location">Contacts de Juliette Delaunay </string>
    <string name="date">../../....</string>
    <string name="ScanBLE">lancer le scan BLE</string>
    <string name="txtbleDivider">error</string>
    <string name="_00" />
    <string name="BLEDeviceName" >error</string>
    <string name="BLEDeviceStatus" >Status:</string>
    <string name="image" />
    <string name="WB_cell" />
    <string name="txtBLE"  >BLE</string>
    <string name="serviceNAME">acces service</string>
    <string name="uuid">UUID</string>
    <string name="arrow" />
    <string name="read">lecture</string>
    <string name="write">écriture</string>
    <string name="notify">notification</string>
    <string name="txt_value">Rentrez une valeur SVP</string>
</resources>
